# rag-engine

./: .gitignore  Makefile  README.md  project1-rag-engine-plan.md  pyproject.toml
configs/: default.yaml
scripts/: download_data.py  generate_charts.py  run_evaluation.py  run_ingestion.py
serve/: api.py
src/: pipeline.py
src/chunking/: base.py  fixed.py  recursive.py  semantic.py  sentence.py
src/evaluation/: benchmark.py  generation_metrics.py  retrieval_metrics.py  system_metrics.py
src/generation/: generator.py  prompts.py
src/ingestion/: cleaner.py  loader.py  metadata.py
src/retrieval/: dense.py  hybrid.py  reranker.py  sparse.py
tests/: test_chunking.py  test_evaluation.py  test_retrieval.py
