[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-engine"
version = "0.1.0"
description = "Production-grade RAG engine with evaluation framework"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Yash Deshpande" },
]

dependencies = [
    # Document processing
    "pymupdf>=1.24.0",          # PDF parsing
    "beautifulsoup4>=4.12.0",   # HTML parsing
    "chardet>=5.0.0",           # Encoding detection

    # Chunking & NLP
    "nltk>=3.8.0",              # Sentence tokenization
    "spacy>=3.7.0",             # NLP pipeline (optional, for advanced chunking)

    # Embeddings & Retrieval
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.8.0",
    "rank-bm25>=0.2.2",

    # Re-ranking
    # (cross-encoders come via sentence-transformers)

    # Generation
    "anthropic>=0.40.0",        # Claude API
    "openai>=1.50.0",           # OpenAI API (evaluation / comparison)

    # Vector store (lightweight alternative)
    "chromadb>=0.5.0",

    # Config & experiment tracking
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # API serving
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",

    # Visualization
    "matplotlib>=3.9.0",
    "plotly>=5.24.0",
    "pandas>=2.2.0",

    # Utilities
    "tqdm>=4.66.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
    "pre-commit>=4.0.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
